@@ -1,3 +1,9 @@
+2002-01-09  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* lib/parser-smi.y: Fixed segfault on illegal VARIABLES in
+	SMIv1 TRAPs. Thanks to <hanule@3ic.co.kr>. Sorry, I cannot determine
+	your name in ISO-8859-1. ;-)
+
 2002-01-08  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* mibs/ietf/CIRCUIT-IF-MIB: added (RFC 3201).
